OH5 ready
Signed-off-by: docbender <vita.tucek@seznam.cz>